update settings names

--- a/options.html
+++ b/options.html
@@ -32,7 +32,7 @@
 
     <div class="toggle-container">
         <label class="toggle-label">
-            <span>Hide SideBar</span>
+            <span>Hide Left Sidebar</span>
             <div class="toggle-switch">
                 <input type="checkbox" id="hideSideBar" class="toggle-input">
                 <span class="toggle-slider"></span>
@@ -62,7 +62,7 @@
 
     <div class="toggle-container">
         <label class="toggle-label">
-            <span>Hide Trending</span>
+            <span>Hide Trending Searches</span>
             <div class="toggle-switch">
                 <input type="checkbox" id="hideTrending" class="toggle-input">
                 <span class="toggle-slider"></span>
