--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Reddit Unhook Options</title>
+    <title>Unhook Reddit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
