added dark mode

--- a/options.html
+++ b/options.html
@@ -11,6 +11,16 @@
     <h2>Reddit Unhook Options</h2>
 
     <div class="options-container">
+        <div class="toggle-container dark-mode-toggle">
+            <label class="toggle-label">
+                <span>Dark Mode</span>
+                <div class="toggle-switch">
+                    <input type="checkbox" id="darkMode" class="toggle-input">
+                    <span class="toggle-slider"></span>
+                </div>
+            </label>
+        </div>
+
         <div class="toggle-container">
             <label class="toggle-label">
                 <span>Hide Home Feed</span>
