minor name change

--- a/options.html
+++ b/options.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h2>Reddit Unhook Options</h2>
+    <h2>Unhook Reddit</h2>
 
     <div class="options-container">
         <div class="toggle-container dark-mode-toggle">
