--- a/options.html
+++ b/options.html
@@ -131,7 +131,14 @@
                 </div>
             </label>
         </div>
+        <div class="feedback-section">
+            <a href="https://forms.gle/wB7BN8a7Be9aJTRq7" target="_blank" class="feedback-link">
+                📝 Report a bug or suggest a feature
+            </a>
+        </div>
     </div>
+
+
 
     <script src="options.js"></script>
 </body>
