--- a/options.html
+++ b/options.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Unhook Reddit</title>
+    <title>Unhook for Reddit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h2>Unhook Reddit</h2>
+    <h2>Unhook for Reddit</h2>
 
     <div class="options-container">
         <div class="toggle-container dark-mode-toggle">
