--- a/options.html
+++ b/options.html
@@ -22,114 +22,202 @@
         </div>
 
         <div class="toggle-container">
-            <label class="toggle-label">
-                <span>Hide Home Feed</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideHomeFeed" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideHomeFeed"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Home Feed</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideHomeFeed" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container">
-            <label class="toggle-label">
-                <span>Hide Subreddit Feed</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideSubredditFeed" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideSubredditFeed"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Subreddit Feed</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideSubredditFeed" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container">
-            <label class="toggle-label">
-                <span>Hide Left Sidebar</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideSideBar" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideSideBar"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Left Sidebar</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideSideBar" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <!-- Indented sidebar sub-options -->
         <div class="toggle-container indented sidebar-sub-option">
-            <label class="toggle-label">
-                <span>Hide Popular</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hidePopular" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hidePopular"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Popular</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hidePopular" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container indented sidebar-sub-option">
-            <label class="toggle-label">
-                <span>Hide Explore</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideExplore" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideExplore"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Explore</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideExplore" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container indented sidebar-sub-option">
-            <label class="toggle-label">
-                <span>Hide Custom Feeds</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideCustomFeeds" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideCustomFeeds"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Custom Feeds</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideCustomFeeds" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container indented sidebar-sub-option">
-            <label class="toggle-label">
-                <span>Hide Recent Subreddits</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideRecentSubreddits" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideRecentSubreddits"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Recent Subreddits</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideRecentSubreddits" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container indented sidebar-sub-option">
-            <label class="toggle-label">
-                <span>Hide Communities</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideCommunities" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideCommunities"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Communities</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideCommunities" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container">
-            <label class="toggle-label">
-                <span>Hide Comments</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideComments" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideComments"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Comments</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideComments" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container">
-            <label class="toggle-label">
-                <span>Hide Recent Posts</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideRecentPosts" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideRecentPosts"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Recent Posts</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideRecentPosts" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
 
         <div class="toggle-container">
-            <label class="toggle-label">
-                <span>Hide Trending Searches</span>
-                <div class="toggle-switch">
-                    <input type="checkbox" id="hideTrending" class="toggle-input">
-                    <span class="toggle-slider"></span>
-                </div>
-            </label>
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideTrending"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Trending Searches</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideTrending" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
         </div>
         <div class="feedback-section">
             <a href="https://forms.gle/wB7BN8a7Be9aJTRq7" target="_blank" class="feedback-link">
