added github button

--- a/options.html
+++ b/options.html
@@ -220,9 +220,17 @@
             </div>
         </div>
         <div class="feedback-section">
-            <a href="https://forms.gle/wB7BN8a7Be9aJTRq7" target="_blank" class="feedback-link">
-                📝 Report a bug or suggest a feature
-            </a>
+            <div class="feedback-left">
+                <a href="https://forms.gle/wB7BN8a7Be9aJTRq7" target="_blank" class="feedback-link">
+                    📝 Report a bug or suggest a feature
+                </a>
+            </div>
+            <div class="feedback-right">
+                <a href="https://github.com/mrandal/unhook-for-reddit" target="_blank" class="github-link"
+                    title="View source code on GitHub">
+                    <img src="assets/github-logo.png" alt="GitHub" class="github-icon">
+                </a>
+            </div>
         </div>
     </div>
 
