add hide search

--- a/options.html
+++ b/options.html
@@ -204,6 +204,25 @@
 
         <div class="toggle-container">
             <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideSearch"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Search</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideSearch" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <!-- Indented search sub-options -->
+        <div class="toggle-container indented search-sub-option">
+            <div class="lock-section">
                 <button type="button" class="lock-button" data-setting="hideTrending"
                     title="Click to permanently lock this setting">
                     <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
