--- a/options.html
+++ b/options.html
@@ -166,6 +166,24 @@
             </div>
         </div>
 
+        <div class="toggle-container indented sidebar-sub-option">
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideAll"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide r/All</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideAll" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
         <div class="toggle-container">
             <div class="lock-section">
                 <button type="button" class="lock-button" data-setting="hideComments"
