Add right sidebar and community highlight options

--- a/options.html
+++ b/options.html
@@ -59,6 +59,24 @@
 
         <div class="toggle-container">
             <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideCommunityHighlights"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Community Highlights</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideCommunityHighlights" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <div class="toggle-container">
+            <div class="lock-section">
                 <button type="button" class="lock-button" data-setting="hideSideBar"
                     title="Click to permanently lock this setting">
                     <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
@@ -204,6 +222,25 @@
 
         <div class="toggle-container">
             <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideRightSidebar"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Right Sidebar</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideRightSidebar" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <!-- Indented right sidebar sub-options -->
+        <div class="toggle-container indented right-sidebar-sub-option">
+            <div class="lock-section">
                 <button type="button" class="lock-button" data-setting="hideRecentPosts"
                     title="Click to permanently lock this setting">
                     <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
@@ -214,6 +251,24 @@
                     <span>Hide Recent Posts</span>
                     <div class="toggle-switch">
                         <input type="checkbox" id="hideRecentPosts" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <div class="toggle-container indented right-sidebar-sub-option">
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideSubredditInfo"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Subreddit Info</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideSubredditInfo" class="toggle-input">
                         <span class="toggle-slider"></span>
                     </div>
                 </label>
