Add gallery and popular communities settings

--- a/options.html
+++ b/options.html
@@ -41,6 +41,24 @@
 
         <div class="toggle-container">
             <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideGallery"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Gallery</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideGallery" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <div class="toggle-container">
+            <div class="lock-section">
                 <button type="button" class="lock-button" data-setting="hideSubredditFeed"
                     title="Click to permanently lock this setting">
                     <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
@@ -269,6 +287,24 @@
                     <span>Hide Subreddit Info</span>
                     <div class="toggle-switch">
                         <input type="checkbox" id="hideSubredditInfo" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <div class="toggle-container indented right-sidebar-sub-option">
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hidePopularCommunities"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Popular Communities</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hidePopularCommunities" class="toggle-input">
                         <span class="toggle-slider"></span>
                     </div>
                 </label>
