--- a/options.html
+++ b/options.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <h2>Unhook for Reddit</h2>
+    <div class="header">
+        <img src="assets/unhook-reddit-48.png" alt="Unhook for Reddit" class="header-logo">
+        <h2>Unhook for Reddit</h2>
+    </div>
 
     <div class="options-container">
         <div class="toggle-container dark-mode-toggle">
@@ -114,24 +117,6 @@
         <!-- Indented sidebar sub-options -->
         <div class="toggle-container indented sidebar-sub-option">
             <div class="lock-section">
-                <button type="button" class="lock-button" data-setting="hideGames"
-                    title="Click to permanently lock this setting">
-                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
-                </button>
-            </div>
-            <div class="setting-section">
-                <label class="toggle-label">
-                    <span>Hide Games</span>
-                    <div class="toggle-switch">
-                        <input type="checkbox" id="hideGames" class="toggle-input">
-                        <span class="toggle-slider"></span>
-                    </div>
-                </label>
-            </div>
-        </div>
-
-        <div class="toggle-container indented sidebar-sub-option">
-            <div class="lock-section">
                 <button type="button" class="lock-button" data-setting="hidePopular"
                     title="Click to permanently lock this setting">
                     <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
@@ -160,6 +145,42 @@
                     <span>Hide Explore</span>
                     <div class="toggle-switch">
                         <input type="checkbox" id="hideExplore" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <div class="toggle-container indented sidebar-sub-option">
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideAll"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide r/All</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideAll" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <div class="toggle-container indented sidebar-sub-option">
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideGames"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Games</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideGames" class="toggle-input">
                         <span class="toggle-slider"></span>
                     </div>
                 </label>
@@ -214,24 +235,6 @@
                     <span>Hide Communities</span>
                     <div class="toggle-switch">
                         <input type="checkbox" id="hideCommunities" class="toggle-input">
-                        <span class="toggle-slider"></span>
-                    </div>
-                </label>
-            </div>
-        </div>
-
-        <div class="toggle-container indented sidebar-sub-option">
-            <div class="lock-section">
-                <button type="button" class="lock-button" data-setting="hideAll"
-                    title="Click to permanently lock this setting">
-                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
-                </button>
-            </div>
-            <div class="setting-section">
-                <label class="toggle-label">
-                    <span>Hide r/All</span>
-                    <div class="toggle-switch">
-                        <input type="checkbox" id="hideAll" class="toggle-input">
                         <span class="toggle-slider"></span>
                     </div>
                 </label>
