--- a/options.html
+++ b/options.html
@@ -269,7 +269,7 @@
             </div>
             <div class="setting-section">
                 <label class="toggle-label">
-                    <span>Hide Upvotes</span>
+                    <span>Hide Comment Upvotes</span>
                     <div class="toggle-switch">
                         <input type="checkbox" id="hideUpvotes" class="toggle-input">
                         <span class="toggle-slider"></span>
@@ -287,7 +287,7 @@
             </div>
             <div class="setting-section">
                 <label class="toggle-label">
-                    <span>Hide Upvote Count</span>
+                    <span>Hide Upvote Count Only</span>
                     <div class="toggle-switch">
                         <input type="checkbox" id="hideUpvoteCount" class="toggle-input">
                         <span class="toggle-slider"></span>
