--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Unhook for Reddit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -400,6 +401,24 @@
                     <span>Hide Trending Searches</span>
                     <div class="toggle-switch">
                         <input type="checkbox" id="hideTrending" class="toggle-input">
+                        <span class="toggle-slider"></span>
+                    </div>
+                </label>
+            </div>
+        </div>
+
+        <div class="toggle-container">
+            <div class="lock-section">
+                <button type="button" class="lock-button" data-setting="hideNotifications"
+                    title="Click to permanently lock this setting">
+                    <img src="assets/lock-icon-white.png" alt="Lock" class="lock-icon">
+                </button>
+            </div>
+            <div class="setting-section">
+                <label class="toggle-label">
+                    <span>Hide Notifications</span>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="hideNotifications" class="toggle-input">
                         <span class="toggle-slider"></span>
                     </div>
                 </label>
